input ouput streams working just fine .. finally!